--- a/layouts/partials/paige/head-last.html
+++ b/layouts/partials/paige/head-last.html
@@ -1,1 +1,1 @@
-<link rel="stylesheet" href="https://github.com/Code-Crumbs-HS/code-crumb-site/blob/main/static/css/custom.css" />
+<link rel="stylesheet" href="https://raw.githubusercontent.com/cskartikey/code-crumb-site/main/static/css/custom.css" />
