--- a/layouts/partials/paige/head-last.html
+++ b/layouts/partials/paige/head-last.html
@@ -1,1 +1,1 @@
-<link rel="stylesheet" href="https://raw.githubusercontent.com/cskartikey/code-crumb-site/main/static/css/custom.css" />
+<link rel="stylesheet" href="https://code-crumbs-hs.github.io/code-crumb-site/css/custom.css" />
